--- a/styles.css
+++ b/styles.css
@@ -710,6 +710,14 @@ header .fa-bars {
     border-radius: 0.5rem;
     border-bottom: 0.5rem solid #8e44ad;
   }
+  .hero-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 150px 20px 20px;
+  }
   #editorcontainer {
     width: 95vw;
     padding: 30px 15px;
@@ -786,5 +794,8 @@ header .fa-bars {
   .form {
     position: relative;
     right: 10px;
+  }
+  .dash {
+    font-size: 45px;
   }
 }
